--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "homepage": "https://github.com/Nuggies-bot/buttonroles-example#readme",
   "dependencies": {
+    "discord-buttons": "^4.0.0",
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
-    "nuggies": "github:Nuggies-bot/nuggies-npm"
+    "nuggies": "^1.2.5"
   }
 }
