--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "discord-buttons": "^4.0.0",
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
-    "nuggies": "^1.3.2"
+    "nuggies": "github:Nuggies-bot/nuggies-npm#dev"
   }
 }
